feat: add TUI for better map rendering